[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "techcombank-parser"
version = "1.0.1"
description = "Parse Techcombank credit card PDF statements"
requires-python = ">=3.10"
dependencies = [
    "PyMuPDF>=1.24",
    "pdfplumber>=0.11",
    "pydantic>=2.0",
    "click>=8.1",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "Flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
techcombank-parser = "techcombank_parser.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
techcombank_parser = ["web/templates/*", "web/static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
