[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cashflow"
version = "1.0.19"
description = "Cashflow"
requires-python = ">=3.10"
dependencies = [
    "PyMuPDF>=1.24",
    "pdfplumber>=0.11",
    "pydantic>=2.0",
    "click>=8.1",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "Flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
cashflow = "cashflow.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cashflow = ["web/templates/*", "web/static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
